tests/fixtures/invalid/text-after-integer.stderr
TOML parse error at line 1, column 13
  |
1 | answer = 42 the ultimate answer?
  |             ^
Unexpected `t`
Expected newline or end of input
